Create div w/ Javascript

--- a/etch_a_sketch.html
+++ b/etch_a_sketch.html
@@ -10,16 +10,16 @@
 </head>
 
 <body>
-<p>Maggie is the best</p>
+<div id = "main"></div>
   
 <script>
   
-  
-  
-  
-  
+let div = document.createElement("div");
+div.style.width = "100px";
+div.style.height = "100px";
+div.style.backgroundColor = "red";
 
-
+document.getElementById("main").appendChild(div);
 </script>
 </body>
 
