--- a/etch_a_sketch.html
+++ b/etch_a_sketch.html
@@ -6,6 +6,14 @@
     <title>
         Etch-a-Sketch
     </title>
+    <style>
+      #main {
+        background-color: aqua;
+        height: 400px;
+        width: 400px;
+        margin: auto;
+      }
+    </style>
   
 </head>
 
@@ -15,11 +23,24 @@
 <script>
   
 let div = document.createElement("div");
-div.style.width = "100px";
-div.style.height = "100px";
-div.style.backgroundColor = "red";
+div.style.width = "25px";
+div.style.height = "25px";
+div.className = "box";
 
 document.getElementById("main").appendChild(div);
+
+
+document.querySelector(".box").addEventListener("mouseover", mouseOver);
+document.querySelector(".box").addEventListener("mouseout", mouseOut);
+
+
+function mouseOver () {
+  document.querySelector(".box").style.backgroundColor = "red";
+}
+function mouseOut () {
+  document.querySelector(".box").style.backgroundColor = "transparent";
+}
+
 </script>
 </body>
 
