--- a/etch_a_sketch.html
+++ b/etch_a_sketch.html
@@ -9,8 +9,8 @@
     <style>
       #main {
         display: grid;
-        grid-template-columns: 25px 25px 25px 25px 25px 25px 25px 25px 25px 25px 25px 25px 25px 25px 25px 25px;
-        grid-template-rows: 25px;
+        
+        
         background-color: aqua;
         height: 400px;
         width: 400px;
@@ -26,9 +26,11 @@
   
   <script>
     document.body.onload = createBox;
-
+    let k = 16;
+    document.getElementById("main").style.gridTemplateColumns = `repeat(${k},1fr)`;
+    document.getElementById("main").style.gridTemplateRows = `repeat(${k},1fr)`;
     function createBox () {
-      for (i = 0; i < 256; i ++) {
+      for (i = 0; i < (Math.pow(16,2)); i ++) {
         const div = [];
         div[i] = document.createElement(`div${i}`);
         div[i].style.width = "25px";
@@ -64,7 +66,7 @@
     document.querySelector(`button`).addEventListener(`click`, removeBox);
 
     function removeBox () {
-      for (i = 0; i < 256; i ++) {
+      for (i = 0; i < (Math.pow(16,2)); i ++) {
         const div = [];
         div[i] = document.getElementById(`div${i}`);
         document.getElementById(`main`).removeChild(div[i]);
