--- a/calculator.html
+++ b/calculator.html
@@ -22,19 +22,22 @@
     <button id="8" class="button">8</button>
     <button id="7" class="button">7</button>
     <button id="+" class="button">+</button>
+    <button class="button"></button>
     <button id="4" class="button">4</button>
     <button id="5" class="button">5</button>
     <button id="6" class="button">6</button>
     <button id="-" class="button">-</button>
+    <button class="button"></button>
     <button id="1" class="button">1</button>
     <button id="2" class="button">2</button>
     <button id="3" class="button">3</button>
     <button id="/" class="button">/</button>
-    <button id="0" class="button">0</button>
-    <button id="." class="button">.</button>
-    <button id="*" class="button">*</button>
-    <button id="=" class="button">=</button>
     <button id="Clear" class="button">Clear</button>
+    <button id="." class="button">.</button>
+    <button id="0" class="button">0</button>
+    <button id="=" class="button">=</button>
+    <button id="*" class="button">*</button>
+
     
     
 
