--- a/calculator.html
+++ b/calculator.html
@@ -27,7 +27,7 @@
     <button id="5" class="button">5</button>
     <button id="6" class="button">6</button>
     <button id="-" class="button">-</button>
-    <button class="button">blah</button>
+    <button class="button">Hello</button>
     <button id="1" class="button">1</button>
     <button id="2" class="button">2</button>
     <button id="3" class="button">3</button>
